# UA3REO-DDC-Transceiver

./: README.md
.github/workflows/: blank.yml  production.yml
STM32/: .gitignore  CMakeLists.txt  WOLF.ioc
STM32/Inc/: main.h  stm32h7xx_it.h
STM32/MDK-ARM/: startup_stm32h743xx.s
STM32/Src/: color_themes.h  events.c  fft.c  filemanager.c  functions.c  functions.h  lcd.c  lcd_driver.c  main.c  print.h  screen_layout.h  screen_layout_800x480.cpp  sd.c  self_test.c  self_test.h  settings.c  settings.h  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_menu.c  system_menu.h  usbd_cat_if.c  usbd_ua3reo.c  vocoder.c  wifi.c  wspr.c
STM32/Src/FT8/: FT8_main.c  Process_DSP.c  decode_ft8.c
STM32/Src/USBDevice/: usbd_msc_bot.c  usbd_msc_scsi.c
STM32/WOLF/: WOLF.ioc
STM32/WOLF-X1/Inc/: stm32h7xx_it.h
STM32/WOLF/Inc/: image.h  main.h
STM32/WOLF/Src/: front_unit.c  lcd.c  main.c  rf_unit.c  stm32h7xx_it.c
STM32/WOLF/assets/: font.h.in  image.tmpl
STM32/WOLF/cmake/: CMakeLists.txt  STM32H743VITx_FLASH.ld  crt1.c  dependencies.cmake  startup_stm32h743vitx.s  sysmem.c
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/FRONT-UNIT-7/: AUDIO CODEC.SchDoc  Block.SchDoc  FRONT-UNIT-7.PcbLib  FRONT-UNIT-7.PrjPcbStructure  FRONT-UNIT-7.SCHDOC  FRONT-UNIT-7.SchLib  FRONT-UNIT-7.step  FRONT-UNIT-7_1.PcbDoc  OutJob.OutJob
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/FRONT-UNIT-7/3d/: SSOP28_10P2X5P3X1P75_CIR.step
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/FRONT-UNIT-7/Project Outputs for FRONT-UNIT-7/Gerber/: FRONT-UNIT-7-macro.APR_LIB  FRONT-UNIT-7.DRR  FRONT-UNIT-7.EXTREP  FRONT-UNIT-7.GBL  FRONT-UNIT-7.GBO  FRONT-UNIT-7.GBS  (+8 more)
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/FRONT-UNIT-7/__Previews/: Block.SchDocPreview  FRONT-UNIT-7.SCHDOCPreview
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/MOTHERBOARD/: ADC.SchDoc  CLOCK_GENERATOR.SchDoc  CONNECTIONS.SchDoc  DAC.SchDoc  FPGA.SchDoc  MOTHERBOARD.PcbLib  MOTHERBOARD.SCHDOC  MOTHERBOARD.SchLib  MOTHERBOARD_Hristo_JLC2313.HYP  MOTHERBOARD_Hristo_JLC2313.step  MOTHERBOARD_hristo.BomDoc  MOTHERBOARD_hristo.PrjPcb  MOTHERBOARD_hristo.PrjPcbStructure  OutJob.OutJob  POWER.SchDoc  STM32.SchDoc
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/MOTHERBOARD/3d/: QFN-64_UP_LIT.step  SO8W_5P49X5P49_MRN.step  SOIC_150MIL_WIN.step  SOIC_16JLSSIG_WIN.step  SON_T4-6T_MNC.step  TAJB_AVX.step  idc10.SLDPRT
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/MOTHERBOARD/PDNAnalyzer_Config/: Motherboard.pdna
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/MOTHERBOARD/PDNAnalyzer_Output/: DCNets.xml
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/MOTHERBOARD/__Previews/: ADC.SchDocPreview  CLOCK_GENERATOR.SchDocPreview  CONNECTIONS.SchDocPreview  DAC.SchDocPreview  FPGA.SchDocPreview  POWER.SchDocPreview
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/PA-HF_100W-VHF_60W/: PA-CONTROL.SchDoc  PA-HF_100W-VHF_60W.PrjPcb  PA-HF_100W-VHF_60W.PrjPcbStructure  PA-HF_100W-VHF_60W.SchDoc  PA-HF_100W.SchDoc  PA-LPF.SchDoc  PA-VHF_60W.SchDoc
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/PA-HF_100W-VHF_60W/__Previews/: LPF.SchDocPreview  PA-CONTROL.SchDocPreview  PA-HF_100W-VHF_60W.SchDocPreview  PA-HF_100W.SchDocPreview  PA-LPF.SchDocPreview  PA-VHF_60W.SchDocPreview
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/POWER/: POWER.BomDoc  POWER.PrjPcb  POWER.PrjPcbStructure  POWER.SchDoc  POWER_2layer.PcbDoc
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/POWER/PDNAnalyzer_Config/: PowerAmplifier_contour_2LayerPCB.pdna
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/POWER/__Previews/: CHANGELOG.SchDocPreview  POWER.SchDocPreview  USB.SchDocPreview
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/RF-BPF/: FRONT-UNIT-7.stackup  RF-BPF.BomDoc  RF-BPF.OutJob  RF-BPF.PrjPcb  RF-BPF.PrjPcbStructure  RF-BPF.SchDoc
Schematic/Wolf/Altium_Designer/Mod-LZ1HAA-hardware/RF-BPF/__Previews/: RF-BPF.SchDocPreview
Scheme/Experimantal/Mod-LZ1HAA-hardware/FRONT-UNIT-7/: FRONT-UNIT-7.PrjPcb
Scheme/Experimantal/Mod-LZ1HAA-hardware/FRONT-UNIT-7/3d/: PAM8406ER_DIO.step
Scheme/Experimantal/Mod-LZ1HAA-hardware/FRONT-UNIT-7/Project Outputs for FRONT-UNIT-7/BOM/: Bill of Materials-FRONT-UNIT-7.xlsx
Scheme/Experimantal/Mod-LZ1HAA-hardware/FRONT-UNIT-7/Project Outputs for FRONT-UNIT-7/Gerber/: FRONT-UNIT-7-RoundHoles.TXT  FRONT-UNIT-7.GKO  FRONT-UNIT-7.GM15  FRONT-UNIT-7.GPB  FRONT-UNIT-7.GTS
Scheme/Experimantal/Mod-LZ1HAA-hardware/FRONT-UNIT-7/Project Outputs for FRONT-UNIT-7/NC Drill/: FRONT-UNIT-7-SlotHoles.TXT  FRONT-UNIT-7.LDP
Scheme/Experimantal/Mod-LZ1HAA-hardware/FRONT-UNIT-7/Project Outputs for FRONT-UNIT-7/Pick Place/: Pick Place for FRONT-UNIT-7.csv
Scheme/Experimantal/Mod-LZ1HAA-hardware/FRONT-UNIT-7/__Previews/: AUDIO CODEC.SchDocPreview
Scheme/Experimantal/Mod-LZ1HAA-hardware/MOTHERBOARD/: MOTHERBOARD_Hristo_JLC2313.step.SLDPRT  MOTHERBOARD_hristo.PrjPcbVariants
Scheme/Experimantal/Mod-LZ1HAA-hardware/MOTHERBOARD/3d/: NDP0003B.stp  VG-4513CA122_8800M-GGCT3_EPS.step  idc10.STEP
Scheme/Experimantal/Mod-LZ1HAA-hardware/MOTHERBOARD/PDNAnalyzer_Output/MOTHERBOARD_Hristo_JLC2313_sdcard/: OdbCache.cfg
Scheme/Experimantal/Mod-LZ1HAA-hardware/MOTHERBOARD/Project Outputs for MOTHERBOARD_hristo/Gerber/: MOTHERBOARD_Hristo_JLC2313.GBL  MOTHERBOARD_Hristo_JLC2313.GBS  MOTHERBOARD_Hristo_JLC2313.LDP  MOTHERBOARD_Hristo_JLC2313.REP
Scheme/Experimantal/Mod-LZ1HAA-hardware/MOTHERBOARD/__Previews/: MOTHERBOARD.SCHDOCPreview  STM32.SchDocPreview
Scheme/Experimantal/Mod-LZ1HAA-hardware/PA-HF_100W-VHF_60W/: PA-HF_100W.SchDoc  PA-VHF_60W.SchDoc
Scheme/Experimantal/Mod-LZ1HAA-hardware/PA-HF_100W-VHF_60W/__Previews/: PA-LPF.SchDocPreview  PA-VHF_60W.SchDocPreview
Scheme/Experimantal/Mod-LZ1HAA-hardware/POWER/: Database_Libs1.DbLib  USB.SchDoc
Scheme/Experimantal/Mod-LZ1HAA-hardware/POWER/PDNAnalyzer_Config/: Other_contour.pdna
Scheme/Experimantal/Mod-LZ1HAA-hardware/POWER/PDNAnalyzer_Output/: DCNets.xml
Scheme/Experimantal/Mod-LZ1HAA-hardware/RF-BPF/Project Outputs for RF-BPF/Gerber/: RF-BPF.GTL
(+92 files in other folders)
